<resources>
    <string name="app_name">Jamiya</string>
    <string name="login_user_name">User Name</string>
    <string name="login_user_password">Password</string>
    <string name="forgot_password">Forgot Your Password</string>
    <string name="login_button">LOGIN</string>
    <string name="signup_button">SIGNUP</string>
    <string name="language_text_view">عربي</string>
    <string name="signup_name">Name</string>
    <string name="signup_email">Email</string>
    <string name="signup_mobile">Mobile</string>
    <string name="signup_user_name">User Name</string>
    <string name="signup_user_password">Password</string>
    <string name="agree">I agree for</string>
    <string name="terms">Terms &amp; Conditions</string>
    <string name="signup_button_signup">SIGNUP</string>
    <string name="etMessageError">Please enter all fields</string>
    <string name="tvCreate_group">Creat Group</string>
    <string name="tvJoin_group">Join Group</string>
    <string name="etGroupName">Group Name</string>
    <string name="tvNumOfMembers">Number of Members</string>
    <string name="etStartDate">Start Date</string>
    <string name="tvTotal">Total</string>
    <string name="tvInstallmetn">Installment</string>
    <string name="etDescription">Description</string>
    <string name="btnNext">Next</string>
    <string name="btnInvite">Invite</string>
    <string name="etSearch">Search for members</string>
    <string name="btnSave">Save</string>
    <string name="tvAraangment">Arrangement</string>
    <string name="welcome">Welcome</string>
    <string name="pay">Pay</string>
    <string name="edidit_profile">Edit Profile</string>
    <string name="payment_settings">Payment Settings</string>
    <string name="transactions">Transactions</string>
    <string name="my_groups">My Groups</string>
    <string name="logout">Logout</string>
    <string name="my_account">My Account</string>
    <string name="alarm_payment">days for next installment</string>
    <string name="bank_account">Bank Account</string>
    <string name="add_your_bank_details">Add your bank account details</string>
    <string name="to_receive_cash">to receive your cash</string>
    <string name="select_bank">Select Bank</string>
    <string name="iban">IBAN</string>
    <string name="home">Home</string>
    <string name="about_app">About App</string>
    <string name="contact_us">Contact Us</string>
    <string name="lang_more">العربية</string>
    <string name="more">More</string>
    <string name="your_email">Your Email</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="duration">Duration</string>
    <string name="etMembersCountError">Members count must be bigger than</string>
</resources>
